# raytracer

./: CMakeLists.txt  README.md
include/: linearAlgebra.h  png.h  raytracer.h  shapes.h
src/: main.cpp  raytracer.cpp
